--- a/package.json
+++ b/package.json
@@ -18,8 +18,20 @@
     }
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@rootstrap/redux-tools": "^1.0.0",
+    "humps": "^2.0.1",
+    "json-api-normalizer": "^1.0.4",
+    "localforage": "^1.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
@@ -31,10 +43,13 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-import": "^2.24.0",
     "file-loader": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
