--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@formatjs/intl-relativetimeformat": "^9.2.1",
     "@rootstrap/redux-tools": "^1.0.0",
+    "dayjs": "^1.10.6",
     "humps": "^2.0.1",
     "json-api-normalizer": "^1.0.4",
     "localforage": "^1.9.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-intl": "^5.20.7",
     "react-redux": "^7.2.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
