--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "dayjs": "^1.10.6",
+    "foundation-sites": "6.6.3",
     "humps": "^2.0.1",
     "json-api-normalizer": "^1.0.4",
+    "loaders.css": "0.1.2",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -38,6 +40,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "rootstrap-ui": "0.0.2",
     "serialize-javascript": "^6.0.0",
     "source-map-support": "^0.5.19"
   },
@@ -73,7 +76,12 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-stats-plugin": "^0.3.1"
+    "webpack-stats-plugin": "^0.3.1",
+    "postcss-loader": "3.0.0",
+    "autoprefixer": "9.1.1",
+    "sass-loader": "7.1.0",
+    "node-sass": "4.12.0",
+    "node-sass-glob-importer": "5.3.2"
   },
   "prettier": {
     "printWidth": 120,
