--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-stage-2": "^7.8.3",
+    "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "9.1.1",
     "aws-sdk": "^2.690.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.0.1",
@@ -64,8 +66,12 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "4.12.0",
+    "node-sass-glob-importer": "5.3.2",
     "null-loader": "^4.0.0",
+    "postcss-loader": "3.0.0",
     "prettier": "^2.0.5",
+    "sass-loader": "7.1.0",
     "serverless": "^1.72.0",
     "serverless-export-env": "^1.3.1",
     "serverless-offline": "^5.12.1",
@@ -76,12 +82,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-stats-plugin": "^0.3.1",
-    "postcss-loader": "3.0.0",
-    "autoprefixer": "9.1.1",
-    "sass-loader": "7.1.0",
-    "node-sass": "4.12.0",
-    "node-sass-glob-importer": "5.3.2"
+    "webpack-stats-plugin": "^0.3.1"
   },
   "prettier": {
     "printWidth": 120,
